# Micro-Adaptive-Bulk-Processing-Using-Hardware-Assisted-Runtime-Profiling

./: .gitignore  CMakeLists.txt  README.md  hello_world  makefile  test.cpp
benchmarks/: CMakeLists.txt  main.cpp  main.h  mainImplementation.h
benchmarks/cycles_benchmarking/: groupByCyclesBenchmark.h  groupByCyclesBenchmarkImplementation.h  partitionCyclesBenchmark.h  partitionCyclesBenchmarkImplementation.h  selectCyclesBenchmark.h  selectCyclesBenchmarkImplementation.h
benchmarks/data_generation/: dataFiles.cpp  dataFiles.h  dataFiles.hpp  dataFilesImplementation.h  dataFilesImplementation.hpp  dataGenerators.cpp  dataGenerators.hpp  dataGeneratorsImplementation.h  dataGeneratorsImplementation.hpp
benchmarks/groupBy_benchmarks/: groupByCyclesBenchmark.h  groupByCyclesBenchmark.hpp  groupByCyclesBenchmarkImplementation.h  groupByCyclesBenchmarkImplementation.hpp
benchmarks/partition_benchmarks/: partitionCyclesBenchmark.h  partitionCyclesBenchmark.hpp  partitionCyclesBenchmarkImplementation.h  partitionCyclesBenchmarkImplementation.hpp
benchmarks/select_benchmarks/: selectCyclesBenchmark.h  selectCyclesBenchmark.hpp  selectCyclesBenchmarkImplementation.h  selectCyclesBenchmarkImplementation.hpp
benchmarks/time_benchmarking/: selectTimeBenchmark.h  selectTimeBenchmarkImplementation.h  timeBenchmarkHelpers.cpp  timeBenchmarkHelpers.h
benchmarks/utilities/: dataHelpers.cpp  dataHelpers.h  dataHelpers.hpp  dataHelpersImplementation.h  dataHelpersImplementation.hpp  papiHelpers.cpp  papiHelpers.hpp
src/: main.cpp  main.h  mainImplementation.h  test  test.cpp
src/benchmarking/: main.cpp  selectBenchmarks.cpp  selectBenchmarks.h  selectTests.cpp  selectTests.h
src/cycles_benchmarking/: groupByCyclesBenchmark.cpp  groupByCyclesBenchmark.h  groupByCyclesBenchmarkImplementation.h  partitionCyclesBenchmark.h  radixPartitionCyclesBenchmark.h  radixPartitionCyclesBenchmarkImplementation.h  selectCyclesBenchmark.cpp  selectCyclesBenchmark.h
src/data_generation/: config.cpp  config.h  dataFiles.cpp  dataFiles.h  dataFilesImplementation.h  dataGenerators.cpp  dataGenerators.h  dataGeneratorsImplementation.h  data_generator.cpp  data_generator.h  machineConfiguration.h
src/perf_counters/: benchmarking.cpp  benchmarking.h  counterBM.cpp  counterBM.h  counterBenchmark.cpp  counterBenchmark.h  counterTests.cpp  counterTests.h  groupByCountCounterBenchmark.cpp  groupByCountCounterBenchmark.h  groupByCounterBenchmark.cpp  groupByCounterBenchmark.h  hpcTests.cpp  hpcTests.h  selectCounterBenchmark.cpp  selectCounterBenchmark.h
src/time_benchmarking/: selectTimeBenchmark.cpp  selectTimeBenchmark.h  selectTimeBenchmarkImplementation.h  timeBM_select.cpp  timeBM_select.h  timeBenchmarkHelpers.cpp  timeBenchmarkHelpers.h  timeBenchmarkSelect.cpp  timeBenchmarkSelect.h
src/utilities/: dataHelpers.cpp  dataHelpers.h  dataHelpersImplementation.h  papiHelpers.cpp
src/utils/: dataHelpers.cpp  dataHelpers.h  papiHelpers.cpp  papiHelpers.h
